--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,53 +1,61 @@
-*{
-    padding : 0;
-    margin : 0;
+* {
+    padding: 0;
+    margin: 0;
     box-sizing: border-box;
 
 }
+
 /*Inicio Index-pag principal-*/
 .body {
     display: grid;
-    grid-template-columns: repeat(6,1fr);
+    grid-template-columns: repeat(6, 1fr);
     grid-template-rows: auto auto auto auto auto auto;
-    grid-template-areas:"header header header header header header"
-                        "navbar navbar navbar navbar navbar navbar"
-                        "main   main   main   main   main   main"
-                        "aside  aside  aside  aside  aside  aside"
-                        "footer footer footer footer footer footer";
-                        
-                        
+    grid-template-areas: "header header header header header header"
+        "navbar navbar navbar navbar navbar navbar"
+        "main   main   main   main   main   main"
+        "aside  aside  aside  aside  aside  aside"
+        "footer footer footer footer footer footer";
+
+
 }
-.header{
+
+.header {
     grid-area: header;
 }
-.cuotas{
+
+.cuotas {
     text-align: center;
     font-size: 15px;
     background-color: #EEF1E5;
     padding: 15px;
-    font-family:'Lexend Exa', sans-serif;
+    font-family: 'Lexend Exa', sans-serif;
 }
-.imgcompras{
+
+.imgcompras {
     display: flex;
     flex-direction: row-reverse;
     align-items: center;
 }
-.imgcompras img{
+
+.imgcompras img {
     padding-right: 20px;
     padding-top: 20px;
 }
+
 .encabezadofijo h1 {
-    text-align: center;  
+    text-align: center;
     font-size: 80px;
     font-family: 'Newsreader', serif;
     margin-top: 20px;
 }
-.subtitulo{
+
+.subtitulo {
     font-size: 25px;
     text-align: center;
-    font-family:'Noto Sans', sans-serif;
+    font-family: 'Noto Sans', sans-serif;
     letter-spacing: 10px;
 }
+
 .navbar {
     list-style-type: none;
     width: 100%;
@@ -55,28 +63,34 @@
     justify-content: center;
     grid-area: navbar;
 }
-nav li{
+
+nav li {
     display: inline-flex;
     padding: 0px 20px 0px 20px;
 }
-nav a{
+
+nav a {
     padding: 20px;
     text-decoration: none;
-    font-family:'Noto Sans', sans-serif;
+    font-family: 'Noto Sans', sans-serif;
     color: #000;
 }
-nav ul{
+
+nav ul {
     width: 100%;
     list-style-type: none;
     text-align: center;
 }
+
 nav li:hover {
     background-color: rgb(243, 240, 241);
 }
-.main{
+
+.main {
     grid-area: main;
 }
-.fondoprincipal{
+
+.fondoprincipal {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -84,22 +98,24 @@ nav li:hover {
     flex-direction: column;
     height: 138vh;
     color: white;
-    background-image: url(/img/Ihome2.jpg);
+    background-image: url(../img/Ihome2.jpg);
     background-repeat: no-repeat;
     background-size: 1400px;
     background-position: center center;
     font-size: xx-large;
-    font-family:'Lexend Exa', sans-serif;
+    font-family: 'Lexend Exa', sans-serif;
 }
 
-.bandoleraA{
+.bandoleraA {
     padding-right: 414px;
     margin-top: 150px;
 }
-.vs{
+
+.vs {
     font-size: 150px;
 }
-.bandoleraK{
+
+.bandoleraK {
     padding-left: 328px;
     margin-bottom: 150px;
 }
@@ -119,15 +135,18 @@ button {
     cursor: pointer;
     outline: none;
 }
+
 button:hover {
     background-color: black;
     box-shadow: 0px 15px 20px rgba(255, 255, 255, 0.4);
     color: #fff;
     transform: translateY(-7px);
 }
+
 button:active {
     transform: translateY(-1px);
 }
+
 .promociones {
     display: flex;
     flex-direction: column;
@@ -137,25 +156,29 @@ button:active {
     height: 100%;
     line-height: 15px;
     padding: 30px;
-    font-family:'Lexend Exa', sans-serif;
+    font-family: 'Lexend Exa', sans-serif;
 }
+
 .promos {
     padding: 20px;
 }
-.promociones__ul{
+
+.promociones__ul {
     display: flex;
     margin: 0% auto;
     list-style-type: none;
 }
-.aside{
+
+.aside {
     background-color: white;
     grid-area: aside;
 }
-.descubre{
+
+.descubre {
     font-size: xx-large;
     padding: 70px;
     justify-content: center;
-    background-image: url(/img/segundafotoprin.jpg);
+    background-image: url(../img/segundafotoprin.jpg);
     overflow: hidden;
     background-size: cover;
     background-repeat: no-repeat;
@@ -165,45 +188,52 @@ button:active {
     margin: 5% auto;
     border: black 2px solid;
 }
-.descubre img{
+
+.descubre img {
     width: 150%;
     max-width: 100%;
     border-color: black;
     border-style: solid;
 }
-.descubre p{
+
+.descubre p {
     display: flex;
     flex-direction: column;
-    text-align: center; 
+    text-align: center;
     background-color: white;
     align-items: center;
     border-radius: 20px;
     position: center;
     margin-top: 150px;
 }
-.made p{
-    text-align: center; 
-    font-family:'Lexend Exa', sans-serif;
+
+.made p {
+    text-align: center;
+    font-family: 'Lexend Exa', sans-serif;
     padding-bottom: 40px;
     font-size: x-large;
 }
-.news{
+
+.news {
     background-color: black;
     color: white;
     text-align: center;
     padding: 50px;
-    font-family:'Lexend Exa', sans-serif;
+    font-family: 'Lexend Exa', sans-serif;
 }
+
 .footer {
     background-color: #EEF1E5;
     position: relative;
     justify-content: center;
     grid-area: footer;
 }
-.footer li{
+
+.footer li {
     list-style-type: none;
 }
-.fcaja{
+
+.fcaja {
     display: flex;
     margin: 0% auto;
     flex-direction: row;
@@ -213,199 +243,237 @@ button:active {
     align-items: center;
     padding: 50px;
 }
-.fijo{
+
+.fijo {
     text-align: center;
     background-color: #8f8f8f;
     color: white;
     font-size: 'Lexend Exa', sans-serif;
 }
-.piedepagina{
-    font-family:'Lexend Exa', sans-serif;
+
+.piedepagina {
+    font-family: 'Lexend Exa', sans-serif;
 }
-.centrodepiedepagina{
-    font-family:'Lexend Exa', sans-serif;
+
+.centrodepiedepagina {
+    font-family: 'Lexend Exa', sans-serif;
 }
-.seguinos{
-    font-family:'Lexend Exa', sans-serif;
+
+.seguinos {
+    font-family: 'Lexend Exa', sans-serif;
     font-size: large;
 }
-.seguinos ul{
+
+.seguinos ul {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
-.seguinos img{
+
+.seguinos img {
     padding-top: 10px;
 }
-.whatsapp{
+
+.whatsapp {
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
     flex-wrap: nowrap;
 }
-.whatsapp li{
-    padding-left: 5px;
-}
-.mail{
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: center;
-    flex-wrap: nowrap;
-}
-.mail li{
+
+.whatsapp li {
     padding-left: 5px;
 }
 
-.promociones__ul img{
+.mail {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    flex-wrap: nowrap;
+}
+
+.mail li {
+    padding-left: 5px;
+}
+
+.promociones__ul img {
     position: sticky;
 }
 
 /*Fin Index-pag principal*/
 
 /*INICIO RESPONSIVE INDEX*/
-@media screen and (max-width:576px){
+@media screen and (max-width:576px) {
 
-    .fondoprincipal{
+    .fondoprincipal {
         background-size: 890px;
     }
-    .bandoleraA{
+
+    .bandoleraA {
         padding-right: 270px;
         margin-top: 0px;
     }
-    .vs{
+
+    .vs {
         font-size: 150px;
-        
+
     }
-    .bandoleraK{
+
+    .bandoleraK {
         padding-left: 270px;
         margin-bottom: 10px;
     }
-    .promociones__ul{
+
+    .promociones__ul {
         display: flex;
         flex-direction: column;
         align-items: center;
         text-align: center;
     }
-    .fcaja{
+
+    .fcaja {
         padding: 30px;
     }
-    .piedepagina{
+
+    .piedepagina {
         padding-right: 10px;
     }
-    .centrodepiedepagina{
+
+    .centrodepiedepagina {
         padding-right: 10px;
     }
-    .descubre{
+
+    .descubre {
         height: 300px;
         width: 80%;
     }
-    .descubre p{
+
+    .descubre p {
         margin-top: 30px;
     }
 
-    .header{
+    .header {
         grid-area: header;
     }
 }
 
-@media(max-width:391px){
-    *{
+@media(max-width:391px) {
+    * {
         margin: 0;
         padding: 0;
     }
-    .main{
+
+    .main {
         grid-area: main;
     }
-    .encabezadofijo h1{
+
+    .encabezadofijo h1 {
         text-align: center;
         font-size: 60px;
     }
-    .navbar ul{
+
+    .navbar ul {
         margin-top: 40px;
     }
-    .fondoprincipal{
+
+    .fondoprincipal {
         background-size: 150%;
         padding-top: 10px;
     }
-    .bandoleraA{
+
+    .bandoleraA {
         padding-right: 207px;
         margin-top: 60px;
         font-size: 30px;
     }
-    .vs{
+
+    .vs {
         font-size: 150px;
-        
+
     }
-    .bandoleraK{
+
+    .bandoleraK {
         padding-left: 207px;
         margin-bottom: 10px;
         font-size: 30px;
     }
-    .promociones__ul{
+
+    .promociones__ul {
         display: flex;
         flex-direction: column;
         align-items: center;
         text-align: center;
     }
-    .fcaja{
+
+    .fcaja {
         padding: 30px;
         display: flex;
         flex-direction: column;
         align-items: flex-start;
 
     }
-    .piedepagina{
+
+    .piedepagina {
         padding-right: 10px;
         padding-bottom: 40px;
     }
-    .centrodepiedepagina{
+
+    .centrodepiedepagina {
         padding-right: 10px;
         padding-bottom: 40px;
     }
-    .descubre{
+
+    .descubre {
         height: 220px;
         width: 85%;
     }
-    .descubre p{
+
+    .descubre p {
         margin-top: -18px;
     }
 
 }
+
 /*FIN RESPONSIVE INDEX*/
 
 /*Inicio New Arrival*/
 
-.newarr{
+.newarr {
     background-color: black;
     padding: 45px;
     text-align: center;
 }
-.newarr b{
+
+.newarr b {
     font-size: x-large;
     color: white;
-    font-family:'Lexend Exa', sans-serif;
+    font-family: 'Lexend Exa', sans-serif;
 }
-.newarri{
+
+.newarri {
     background-color: #E6D64B;
     padding: 30px;
 }
-.p1{
+
+.p1 {
     font-size: 100px;
-    font-family:'Lexend Exa', sans-serif;
+    font-family: 'Lexend Exa', sans-serif;
     color: white;
     text-shadow: 0 0 12px #000;
-    
+
 }
-.p2{
+
+.p2 {
     font-size: 100px;
-    font-family:'Lexend Exa', sans-serif;
+    font-family: 'Lexend Exa', sans-serif;
     color: white;
     text-align: right;
     text-shadow: 0 0 12px #000;
 }
-.contenido{
+
+.contenido {
     background-color: white;
     width: 95%;
     display: grid;
@@ -414,10 +482,12 @@ button:active {
     grid-gap: 20px;
     margin: 55px;
 }
-.gridItem{
+
+.gridItem {
     width: 300px;
 }
-.contenido img{
+
+.contenido img {
     width: 80%;
     height: 100%;
 }
@@ -425,8 +495,8 @@ button:active {
 /*Fin New Arrival*/
 
 /*INICIO RESPONSIVE NEW ARRIVAL*/
-@media screen and (max-width:576px){
-    .contenido{
+@media screen and (max-width:576px) {
+    .contenido {
         background-color: white;
         width: 100%;
         display: grid;
@@ -435,19 +505,22 @@ button:active {
         grid-gap: 10px;
         margin: 40px;
     }
-    .p1{
+
+    .p1 {
         font-size: 80px;
     }
-    .p2{
+
+    .p2 {
         font-size: 80px;
     }
 }
 
-@media screen and (max-width:391px){
-    .p1{
+@media screen and (max-width:391px) {
+    .p1 {
         font-size: 50px;
     }
-    .p2{
+
+    .p2 {
         font-size: 50px;
     }
 }
@@ -455,41 +528,47 @@ button:active {
 /*FIN RESPONSIVE NEW ARRIVAL*/
 
 /*Inicio Bags*/
-.bags{
+.bags {
     background-color: black;
     padding: 40px;
 }
-.bags p{
+
+.bags p {
     font-size: x-large;
     color: white;
-    font-family:'Lexend Exa', sans-serif;
+    font-family: 'Lexend Exa', sans-serif;
     text-align: center;
 }
-.contbags img{
+
+.contbags img {
     border-radius: 40px;
     padding: 20px;
 }
-.contbags{
+
+.contbags {
     display: flex;
     justify-content: center;
     position: relative;
     overflow: hidden;
     padding: 30px;
 }
-.contbags p{
+
+.contbags p {
     text-align: center;
     padding: 20px;
     font-size: x-large;
-    color:black;
-    font-family:'Lexend Exa', sans-serif;
+    color: black;
+    font-family: 'Lexend Exa', sans-serif;
     background-color: pink;
 }
-.imagenesb{
+
+.imagenesb {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
-.imagenesb button{
+
+.imagenesb button {
     background-color: black;
     border-radius: 5px;
     color: white;
@@ -499,48 +578,55 @@ button:active {
     display: inline-block;
     font-size: 10px;
 }
+
 /*Fin Bags*/
 
 /* INICIO RESPONSIVE BAGS*/
-@media screen and (max-width:576px){
-    .contbags{
+@media screen and (max-width:576px) {
+    .contbags {
         display: flex;
         flex-direction: column;
     }
-    .imagenesb{
+
+    .imagenesb {
         display: flex;
         flex-direction: column;
         align-items: center;
         padding-bottom: 40px;
     }
 }
+
 /*FIN RESPONSIVE BAGS*/
 
 /*Inicio Contactos*/
 
-.contacto form{
+.contacto form {
     margin: 50px;
 }
-.contacto{
+
+.contacto {
     padding-top: 50px;
     padding-left: 100px;
     padding-right: 100px;
     padding-bottom: 100px;
 }
-input[type=text], select, textarea{
+
+input[type=text],
+select,
+textarea {
     width: 100%;
     padding: 12px;
     border: 1px solid #ccc;
     border-radius: 20px;
     resize: vertical;
-    font-family:'Lexend Exa', sans-serif;
+    font-family: 'Lexend Exa', sans-serif;
     font-size: medium;
 }
 
 label {
     padding: 12px 12px 12px 0;
     display: inline-block;
-    font-family:'Lexend Exa', sans-serif;
+    font-family: 'Lexend Exa', sans-serif;
 }
 
 input[type=Enviar] {
@@ -577,7 +663,7 @@ input[type=Enviar]:hover {
 
 
 /* Inicio aboutus*/
-.nosotros{
+.nosotros {
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
@@ -585,37 +671,43 @@ input[type=Enviar]:hover {
     justify-content: space-evenly;
     align-items: flex-end;
 }
-.parrafoin{
-    font-family:'Lexend Exa', sans-serif;
+
+.parrafoin {
+    font-family: 'Lexend Exa', sans-serif;
     font-size: medium;
     text-align: right;
     padding: 100px;
 }
-.alert{
+
+.alert {
     background-color: #f2f2f2;
     color: #000;
 }
+
 /*Fin aboutus*/
 
 /*INICIO RESPONSIVE ABOUT US*/
-@media screen and (max-width:576px){
-    .nosotros{
+@media screen and (max-width:576px) {
+    .nosotros {
         display: flex;
         flex-direction: column;
         align-items: center;
     }
-    .nosotros img{
+
+    .nosotros img {
         padding-top: 20px;
     }
-    .nosotros p{
+
+    .nosotros p {
         padding-top: 40px;
         text-align: center;
     }
 }
+
 /*FIN RESPONSIVE ABOUT US*/
 
 /*Inicio Contacto*/
-.cajafor{
+.cajafor {
     width: 100%;
     height: 650px;
     background: rgb(255, 255, 255);
@@ -626,8 +718,9 @@ input[type=Enviar]:hover {
 }
 
 .cajafor:hover {
- border: #000 0.2em solid;
+    border: #000 0.2em solid;
 }
-.benviar{
+
+.benviar {
     margin-top: 10px;
 }
